--- a/index.html
+++ b/index.html
@@ -10,36 +10,23 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Leftovers Recipe Generator</title>
   </head>
   <body>
     <div class="container">
-      <h1>Leftover Recipe Generator</h1>
-      <form>
+      <h1>Leftovers Recipe Generator</h1>
+      <form id="recipe-form">
         <input
           type="text"
           placeholder="Enter your Leftovers 🥒"
           class="instructions"
+          required
         />
         <input type="submit" class="submit-button" />
       </form>
-      <main>
-        <p>
-          Heat the oil in a saucepan over a medium heat. Add the onion and fry
-          for 10 mins or until softened and turning translucent. Add the curry
-          paste and cook for 1 min. Stir in the coconut milk, chicken stock and
-          risotto rice and bring to a simmer. Cook for 15-20 mins or until the
-          rice is tender.
-        </p>
-        <p>
-          Bring a pan of water to a simmer, add the eggs and cook for 7 mins.
-          Stir the chicken and sweetcorn into the soup and cook for 5 mins to
-          warm everything through. Season to taste and finish with the lime
-          juice. Gently peel the shells off the eggs and cut them in half. Top
-          the soup with the eggs and spring onions.
-        </p>
-      </main>
+      <main id="recipe"></main>
       <footer>
         This AI project was coded by <a href="/">Verity Masters</a>, is
         open-sourced on <a href="/">Github</a> and is hosted on
