integrated axios and AI api

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Leftovers Recipe Generator</title>
   </head>
@@ -23,6 +24,7 @@
           placeholder="Enter your Leftovers 🥒"
           class="instructions"
           required
+          id="user-instructions"
         />
         <input type="submit" class="submit-button" />
       </form>
