--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         This AI project was coded by <a href="/">Verity Masters</a>, is
         open-sourced on <a href="/">Github</a> and is hosted on
         <a href="/">Netlify.</a>
+        <a href="/">
+          <img src="/images/logo.png" alt="Verity Masters Logo" />
+        </a>
       </footer>
     </div>
     <script src="src/index.js"></script>
